Issue #390: Removed some suppresed blocks of pitest-parser